.metadata/.plugins/org.eclipse.cdt.ui/Make_it.build.log
11:10:08 **** Rebuild of configuration Debug for project Make_it ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Make_it.o" "..\\src\\Make_it.cpp" 
..\src\Make_it.cpp: In function 'int main()':
..\src\Make_it.cpp:45:34: error: invalid operands of types 'int [2]' and 'int' to binary 'operator%'
     if ((k == c - 1) & (sumsd[j] % a[2] == 0)) {
                         ~~~~~~~~~^~~~~~

11:10:10 Build Failed. 1 errors, 0 warnings. (took 2s.213ms)

